--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     </div>
     <script>
       function saveOptions() {
-        var slabOptions = {}
+        var slab_config = {}
         //Add all textual values
-        $('select, [type="hidden"], [type="text"]').each(function(){slabOptions[$(this).attr('id')] = $(this).val();})
+        $('select, [type="hidden"], [type="text"]').each(function(){slab_config[$(this).attr('id')] = $(this).val();})
         //Add all checkbox type values
         $('[type="radio"], [type="checkbox"]').each(function(){options[$(this).attr('id')] = $(this).is(':checked');})
-        return slabOptions;
+        return slab_config;
       }
       $().ready(function() {
         $("#b-cancel").click(function() {
