--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       <div data-role="content">
         
         <div data-role="fieldcontain">
-          <label for="use-gps">Use GPS for weather?</label>
-          <select name="use-gps" id="use-gps" data-role="slider">
+          <label for="useGps">Use GPS for weather?</label>
+          <select name="useGps" id="useGps" data-role="slider">
             <option value="off">Off</option>
             <option value="on">On</option>
           </select>
         </div>
         
         <div data-role="fieldcontain">
-          <label for="location-code">Manual Location:</label>
-          <input type="text" size="10" name="location-code" id="location-code"></textarea>
+          <label for="locationCode">Manual Location:</label>
+          <input type="text" size="10" name="locationCode" id="locationCode">
         </div>
 
         <div class="ui-body ui-body-b">
