--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
           <label for="locationCode">Manual Location:</label>
           <input type="text" size="10" name="locationCode" id="locationCode">
         </div>
+        
+        <div data-role="fieldcontain">
+          <label for="tempScale">Temperature Scale</label>
+          <select name="tempScale" id="tempScale" data-role="slider">
+            <option value="celsius">Celsius</option>
+            <option value="fahrenheit">Fahrenheit</option>
+          </select>
+        </div>
 
         <div class="ui-body ui-body-b">
           <fieldset class="ui-grid-a">
