--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div data-role="fieldcontain">
           <label for="tempScale">Temperature Scale</label>
           <select name="tempScale" id="tempScale" data-role="slider">
-            <option value="celsius">Celsius</option>
-            <option value="fahrenheit">Fahrenheit</option>
+            <option value="celsius">°C</option>
+            <option value="fahrenheit">°F</option>
           </select>
         </div>
 
